--- a/Code/README
+++ b/Code/README
@@ -3,4 +3,4 @@ Python3: scikit-learn, pandas, csv
 R: ggplot2, precrec, pROC, pec, survcomp, survminer, survival
 
 All results from the manuscript can be reproduced when the scripts are run following the order.
-Please use the Dataset 1 as an input which is uploaded to the submitssion system.
+Please use the Dataset 1 (61971_1_data_set_523545_qkrh1s.xlsx) as an input which is uploaded to the submitssion system.
