--- a/Code/README
+++ b/Code/README
@@ -4,3 +4,5 @@ R (4.0.2): ggplot2 (3.3.2), precrec (0.11.2), pROC (1.16.2), pec (2019.11.3), su
 
 All results from the manuscript can be reproduced when the scripts are run following the order.
 Please use the Dataset 1 (61971_1_data_set_523545_qkrh1s.xlsx) from the manuscript submission system as an input.
+
+1.GridSearch.py: Generates hyperparameters for RF16 and RF11.
