--- a/Code/README
+++ b/Code/README
@@ -6,3 +6,6 @@ All results from the manuscript can be reproduced when the scripts are run follo
 Please use the Dataset 1 (61971_1_data_set_523545_qkrh1s.xlsx) from the manuscript submission system as an input.
 
 1.GridSearch.py: Generates hyperparameters for RF16 and RF11.
+2.RandomForestClassifier.py: 
+3.ROC_PRC_Training.R:
+4.ROC_PRC_TEst.R:
